--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,117 @@
 /****** General ***********/
 
+// https://cssloaders.github.io/
+div.spinner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: $darkGrey;
+    z-index: 2;
+    transition: opacity 1s, visibility 5s;
+    animation: loading-bg 1s 3s forwards;
+
+    .loader {
+        position: relative;
+        width: 120px;
+        height: 14px;
+        border-radius: 0 0 15px 15px;
+        background-color: #3e494d;
+        box-shadow: 0 -1px 4px #5d6063 inset;
+        animation: panex 0.5s linear alternate infinite;
+        transform-origin: 170px 0;
+        z-index: 10;
+        perspective: 300px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: calc(100% - 2px);
+            top: 0;
+            z-index: -2;
+            height: 10px;
+            width: 70px;
+            border-radius: 0 4px 4px 0;
+            background-repeat: no-repeat;
+            background-image: linear-gradient(#6c4924, #4b2d21), linear-gradient(#4d5457 24px, transparent 0), linear-gradient(#9f9e9e 24px, transparent 0);
+            background-size: 50px 10px, 4px 8px, 24px 4px;
+            background-position: right center, 17px center, 0px center;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 0;
+            z-index: -2;
+            transform: translate(-50%, -20px) rotate3d(75, -2, 3, 78deg);
+            width: 55px;
+            height: 53px;
+            background: #fff;
+            background-image:
+                radial-gradient(circle 3px, #fff6 90%, transparent 10%),
+                radial-gradient(circle 12px, #ffc400 90%, transparent 10%),
+                radial-gradient(circle 12px, #ffae00 100%, transparent 0);
+            background-repeat: no-repeat;
+            background-position: -4px -6px, -2px -2px, -1px -1px;
+            box-shadow: -2px -3px #0002 inset, 0 0 4px #0003 inset;
+            border-radius: 47% 36% 50% 50% / 49% 45% 42% 44%;
+            animation: eggRst 1s ease-out infinite;
+        }
+    }
+}
+
+@keyframes loading-bg {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        transform: scale(0);
+    }
+}
+
+@keyframes eggRst {
+
+    0%,
+    100% {
+        transform: translate(-50%, -20px) rotate3d(90, 0, 0, 90deg);
+        opacity: 0;
+    }
+
+    10%,
+    90% {
+        transform: translate(-50%, -30px) rotate3d(90, 0, 0, 90deg);
+        opacity: 1;
+    }
+
+    25% {
+        transform: translate(-50%, -40px) rotate3d(85, 17, 2, 70deg)
+    }
+
+    75% {
+        transform: translate(-50%, -40px) rotate3d(75, -3, 2, 70deg)
+    }
+
+    50% {
+        transform: translate(-55%, -50px) rotate3d(75, -8, 3, 50deg)
+    }
+}
+
+@keyframes panex {
+    0% {
+        transform: rotate(-5deg)
+    }
+
+    100% {
+        transform: rotate(10deg)
+    }
+}
 
 header {
     display: flex;
@@ -9,7 +121,7 @@ header {
     height: 63px;
 
     .logo {
-        color:black;
+        color: black;
         text-align: center;
         font-family: Shrikhand;
         font-size: 30px;
@@ -31,7 +143,7 @@ main {
         p {
             font-size: 16px;
             color: $darkenGrey;
-            padding-left: 3%;
+            padding-left: 10px;
         }
     }
 
@@ -81,10 +193,23 @@ main {
             height: 50px;
             display: flex;
             align-items: center;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+            transition: box-shadow .5s, opacity .5s, transform .5s;
+
+            &:hover {
+                opacity: 85%;
+                box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
+                -ms-transform: scale(1.01);
+                /* IE 9 */
+                -webkit-transform: scale(1.01);
+                /* Safari 3-8 */
+                transform: scale(1.01);
+            }
+
         }
     }
 
-  /*******fonctionnement*******/  
+    /*******fonctionnement*******/
 
 
     section.functioning {
@@ -116,7 +241,6 @@ main {
             font-weight: 500;
             font-size: 16px;
             font-family: 'Roboto', sans-serif;
-
             margin-bottom: 30px;
 
             .badge {
@@ -146,16 +270,10 @@ main {
                 }
             }
         }
-        
+
     }
 
-    @media (min-width: 996px) {
-        section.functioning {
-            flex-direction: row;
-    }
- }  
-
-  /*******restaurants*******/  
+    /*******restaurants*******/
 
     section.eateries {
         display: flex;
@@ -239,23 +357,24 @@ main {
                         justify-content: center;
                         align-items: center;
                         width: 20%;
-                    
-                        i{
-                            position: absolute;
-                            }
-                        }
 
-                        .full{
-                            opacity: 0;
-                            transition-property: all;
-                            transition-duration: 300ms;
-                           
-                            &:hover{
-                                opacity: 1;
-                                color: transparent;
-                                background-image: linear-gradient(#FF79DA, #9356DC);
-                                background-clip: text;
-                                -webkit-background-clip: text;
+                        i {
+                            position: absolute;
+                            font-size: 24px;
+                        }
+                    }
+
+                    .full {
+                        opacity: 0;
+                        transition-property: all;
+                        transition-duration: 500ms;
+
+                        &:hover {
+                            opacity: 1;
+                            color: transparent;
+                            background-image: linear-gradient(#FF79DA, #9356DC);
+                            background-clip: text;
+                            -webkit-background-clip: text;
                         }
 
                     }
@@ -263,27 +382,12 @@ main {
             }
         }
     }
-    @media (min-width: 996px) {
-        section.eateries{
-            justify-content: flex-start;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            padding-left: 10%;
-            flex-direction: row;
-                a{
-                    width: 40%;
-                    margin-bottom: 30px;
-                    margin-left: 3%;
-            }
-        }
-    }
-    
 }
 
 
 
 
-  /*******footer*******/  
+/*******footer*******/
 
 footer {
     background-color: $darkenGrey;
@@ -296,7 +400,7 @@ footer {
         padding-left: 25px;
         padding-top: 25px;
         padding-bottom: 25px;
-        font-family: 'Shrikhand';
+        font-family: Shrikhand;
         font-size: 18px;
         font-weight: 400;
         line-height: 26.24px;
@@ -328,20 +432,276 @@ footer {
     }
 }
 
-@media (min-width: 996px) {
-    footer {
-     justify-content: flex-end;
-     align-items: flex-end;
-     flex-direction: row; 
+@media (min-width: 769px) {
+    main#home {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-    h2{
-        padding-bottom: 10px;
-    } 
-    
-    p{ 
-        &.contact{
-        padding-bottom: 15px;
+        section.explore {
+            width: 100%;
+
+            h2 {
+                font-size: 40px;
+            }
         }
-      }
+
+        section.functioning {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding-left: 50%;
+            padding-right: 50%;
+            width: 100%;
+
+            h2 {
+                margin-left: 2.5%;
+                padding-left: 0;
+            }
+
+            button {
+                width: 28%;
+                padding-left: 5%;
+                padding-right: 5%;
+
+                i {
+                    left: 7%;
+                }
+            }
+        }
+
+        section.eateries {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding-left: 15%;
+            padding-right: 15%;
+            width: 100%;
+
+            h2 {
+                margin-left: 2.5%;
+                padding-left: 0;
+            }
+
+            a {
+                width: 45%;
+            }
+        }
+    }
+
+
+    footer {
+        flex-direction: row;
+        justify-content: flex-end;
+        height: 114px;
+
+        h2 {
+            width: 20%;
+            order: 2;
+            padding-bottom: 30px;
+            padding-top: 60px;
+            text-align: center;
+        }
+
+        p {
+            order: 1;
+            padding-top: 25px;
+            padding-bottom: 30px;
+            padding-top: 62px;
+        }
     }
 }
+
+/*********Page*********/
+.pageheader {
+display: flex;
+justify-content: space-between;
+
+    h1{
+        padding-right: 30%;
+    }
+
+    i {
+        padding-left: 20px;
+    }
+}
+
+
+.backimage{
+    height: 275px;
+    width: 100%;
+    object-fit: cover;
+    object-position:center bottom;
+}
+
+.pagemenu{
+    width: 100%;
+    height: 1307px;
+    background: #F3F3F3;
+    border-radius: 40px 40px 0px 0px;
+    top: -40px;
+    position: relative;
+    margin-bottom: -40px;
+  
+
+    .title{    
+        display: flex;
+        width: 100%;
+        flex-wrap: nowrap;
+           
+                h4{
+                    color:black;
+                    font-family: Shrikhand;
+                    font-size: 28px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: normal;
+                    width: 90%;
+                    padding-left: 20px;
+                }
+
+                span{    
+                    display: flex; 
+                        justify-content: flex-end;
+                        align-items: center;
+                        width: 10%;
+                        padding-right: 10%;
+                    h2{
+                        font-family:Shrikhand, cursive;
+                        margin-right: 20%;
+                    }
+
+                    i {
+                        position: absolute;
+                        font-size: 24px;
+                    }
+                
+
+                .fullpage {
+                    opacity: 0;
+                    transition-property: all;
+                    transition-duration: 500ms;
+
+                    &:hover {
+                        opacity: 1;
+                        color: transparent;
+                        background-image: linear-gradient(#FF79DA, #9356DC);
+                        background-clip: text;
+                        -webkit-background-clip: text;
+                    }
+
+                }
+
+            }
+
+    }
+    h2{
+
+            color: #000;
+            font-family: Roboto;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: normal;
+            text-transform: uppercase;
+            padding-left: 3%;
+
+            &:after {
+                display: flex;
+                bottom: 2px;
+                content: "";
+                width: 30px;
+                height: 3px;
+                background-color: #99E2D0;
+            }
+    }
+    .card{
+            display: flex;
+            justify-content: flex-start;
+            width: 92%;
+            border-radius: 15.043px;
+            box-shadow: 0px 4.01149px 15.0431px 0px rgba(0, 0, 0, 0.10);
+            background:$white;
+            margin-left: 4%;
+            margin-right: 5%;
+            margin-bottom: 5%;
+
+            div
+            {
+                display: flex;
+                flex-direction: column;
+                width: 85%;
+                padding-top: 10px;
+                padding-left: 15px;
+            }
+
+            
+
+
+            h3 {
+                margin-top: 0;
+                margin-bottom: 5px;
+            }
+
+            span {
+                display: flex;
+                justify-content: space-between;
+                align-items: first baseline;
+            }
+
+            p {
+                margin-top: 0;
+                margin-bottom: 0;
+                font-size: 17px;
+                font-weight: 300;
+            }
+
+            h4 {
+                padding-top: 15px;
+            }
+        }
+        
+}
+
+.commander{
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+        .btn {
+            padding-left: 8px;
+            padding-right: 8px;
+            text-decoration: none;
+            font-family: Roboto;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+
+            height: 50px;
+            width: 35%;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            color: #fff;
+            background: linear-gradient(#FF79DA, #9356DC);
+            border-radius: 50px;
+            border: none;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+            transition: box-shadow 0.5s, opacity 0.5s, transform 0.5s;
+            
+            
+            &:hover {
+                opacity: 85%;
+                box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
+                -ms-transform: scale(1.01);
+                /* IE 9 */
+                -webkit-transform: scale(1.01);
+                /* Safari 3-8 */
+                transform: scale(1.01);
+            }
+        }
+}
+
