--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,100 @@ a {
 }
 
 /****** General ***********/
+div.spinner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #EAEAEA;
+  z-index: 2;
+  transition: opacity 1s, visibility 5s;
+  animation: loading-bg 1s 3s forwards;
+}
+div.spinner .loader {
+  position: relative;
+  width: 120px;
+  height: 14px;
+  border-radius: 0 0 15px 15px;
+  background-color: #3e494d;
+  box-shadow: 0 -1px 4px #5d6063 inset;
+  animation: panex 0.5s linear alternate infinite;
+  transform-origin: 170px 0;
+  z-index: 10;
+  perspective: 300px;
+}
+div.spinner .loader::before {
+  content: "";
+  position: absolute;
+  left: calc(100% - 2px);
+  top: 0;
+  z-index: -2;
+  height: 10px;
+  width: 70px;
+  border-radius: 0 4px 4px 0;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(#6c4924, #4b2d21), linear-gradient(#4d5457 24px, transparent 0), linear-gradient(#9f9e9e 24px, transparent 0);
+  background-size: 50px 10px, 4px 8px, 24px 4px;
+  background-position: right center, 17px center, 0px center;
+}
+div.spinner .loader::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 0;
+  z-index: -2;
+  transform: translate(-50%, -20px) rotate3d(75, -2, 3, 78deg);
+  width: 55px;
+  height: 53px;
+  background: #fff;
+  background-image: radial-gradient(circle 3px, rgba(255, 255, 255, 0.4) 90%, transparent 10%), radial-gradient(circle 12px, #ffc400 90%, transparent 10%), radial-gradient(circle 12px, #ffae00 100%, transparent 0);
+  background-repeat: no-repeat;
+  background-position: -4px -6px, -2px -2px, -1px -1px;
+  box-shadow: -2px -3px rgba(0, 0, 0, 0.1333333333) inset, 0 0 4px rgba(0, 0, 0, 0.2) inset;
+  border-radius: 47% 36% 50% 50%/49% 45% 42% 44%;
+  animation: eggRst 1s ease-out infinite;
+}
+
+@keyframes loading-bg {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    transform: scale(0);
+  }
+}
+@keyframes eggRst {
+  0%, 100% {
+    transform: translate(-50%, -20px) rotate3d(90, 0, 0, 90deg);
+    opacity: 0;
+  }
+  10%, 90% {
+    transform: translate(-50%, -30px) rotate3d(90, 0, 0, 90deg);
+    opacity: 1;
+  }
+  25% {
+    transform: translate(-50%, -40px) rotate3d(85, 17, 2, 70deg);
+  }
+  75% {
+    transform: translate(-50%, -40px) rotate3d(75, -3, 2, 70deg);
+  }
+  50% {
+    transform: translate(-55%, -50px) rotate3d(75, -8, 3, 50deg);
+  }
+}
+@keyframes panex {
+  0% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(10deg);
+  }
+}
 header {
   display: flex;
   justify-content: center;
@@ -57,7 +151,7 @@ main .localisation {
 main .localisation p {
   font-size: 16px;
   color: #353535;
-  padding-left: 3%;
+  padding-left: 10px;
 }
 main .reservation {
   width: 100%;
@@ -103,6 +197,17 @@ main .reservation .btn {
   height: 50px;
   display: flex;
   align-items: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.5s, opacity 0.5s, transform 0.5s;
+}
+main .reservation .btn:hover {
+  opacity: 85%;
+  box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
+  -ms-transform: scale(1.01);
+  /* IE 9 */
+  -webkit-transform: scale(1.01);
+  /* Safari 3-8 */
+  transform: scale(1.01);
 }
 main section.functioning {
   display: flex;
@@ -155,11 +260,6 @@ main section.functioning button i {
 }
 main section.functioning button:hover i {
   color: #9356DC;
-}
-@media (min-width: 996px) {
-  main section.functioning {
-    flex-direction: row;
-  }
 }
 main section.eateries {
   display: flex;
@@ -240,11 +340,12 @@ main section.eateries a article .eatery-container .like {
 }
 main section.eateries a article .eatery-container .like i {
   position: absolute;
+  font-size: 24px;
 }
 main section.eateries a article .eatery-container .full {
   opacity: 0;
   transition-property: all;
-  transition-duration: 300ms;
+  transition-duration: 500ms;
 }
 main section.eateries a article .eatery-container .full:hover {
   opacity: 1;
@@ -252,20 +353,6 @@ main section.eateries a article .eatery-container .full:hover {
   background-image: linear-gradient(#FF79DA, #9356DC);
   background-clip: text;
   -webkit-background-clip: text;
-}
-@media (min-width: 996px) {
-  main section.eateries {
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding-left: 10%;
-    flex-direction: row;
-  }
-  main section.eateries a {
-    width: 40%;
-    margin-bottom: 30px;
-    margin-left: 3%;
-  }
 }
 
 /*******footer*******/
@@ -280,7 +367,7 @@ footer h2 {
   padding-left: 25px;
   padding-top: 25px;
   padding-bottom: 25px;
-  font-family: "Shrikhand";
+  font-family: Shrikhand;
   font-size: 18px;
   font-weight: 400;
   line-height: 26.24px;
@@ -306,18 +393,232 @@ footer p.contact {
   padding-bottom: 25px;
 }
 
-@media (min-width: 996px) {
-  footer {
-    justify-content: flex-end;
-    align-items: flex-end;
+@media (min-width: 769px) {
+  main#home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  main#home section.explore {
+    width: 100%;
+  }
+  main#home section.explore h2 {
+    font-size: 40px;
+  }
+  main#home section.functioning {
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-left: 50%;
+    padding-right: 50%;
+    width: 100%;
+  }
+  main#home section.functioning h2 {
+    margin-left: 2.5%;
+    padding-left: 0;
+  }
+  main#home section.functioning button {
+    width: 28%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  main#home section.functioning button i {
+    left: 7%;
+  }
+  main#home section.eateries {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-left: 15%;
+    padding-right: 15%;
+    width: 100%;
+  }
+  main#home section.eateries h2 {
+    margin-left: 2.5%;
+    padding-left: 0;
+  }
+  main#home section.eateries a {
+    width: 45%;
+  }
+  footer {
+    flex-direction: row;
+    justify-content: flex-end;
+    height: 114px;
   }
   footer h2 {
-    padding-bottom: 10px;
+    width: 20%;
+    order: 2;
+    padding-bottom: 30px;
+    padding-top: 60px;
+    text-align: center;
   }
-  footer p.contact {
-    padding-bottom: 15px;
+  footer p {
+    order: 1;
+    padding-top: 25px;
+    padding-bottom: 30px;
+    padding-top: 62px;
   }
+}
+/*********Page*********/
+.pageheader {
+  display: flex;
+  justify-content: space-between;
+}
+.pageheader h1 {
+  padding-right: 30%;
+}
+.pageheader i {
+  padding-left: 20px;
+}
+
+.backimage {
+  height: 275px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center bottom;
+}
+
+.pagemenu {
+  width: 100%;
+  height: 1307px;
+  background: #F3F3F3;
+  border-radius: 40px 40px 0px 0px;
+  top: -40px;
+  position: relative;
+  margin-bottom: -40px;
+}
+.pagemenu .title {
+  display: flex;
+  width: 100%;
+  flex-wrap: nowrap;
+}
+.pagemenu .title h4 {
+  color: black;
+  font-family: Shrikhand;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 90%;
+  padding-left: 20px;
+}
+.pagemenu .title span {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 10%;
+  padding-right: 10%;
+}
+.pagemenu .title span h2 {
+  font-family: Shrikhand, cursive;
+  margin-right: 20%;
+}
+.pagemenu .title span i {
+  position: absolute;
+  font-size: 24px;
+}
+.pagemenu .title span .fullpage {
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 500ms;
+}
+.pagemenu .title span .fullpage:hover {
+  opacity: 1;
+  color: transparent;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+.pagemenu h2 {
+  color: #000;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  text-transform: uppercase;
+  padding-left: 3%;
+}
+.pagemenu h2:after {
+  display: flex;
+  bottom: 2px;
+  content: "";
+  width: 30px;
+  height: 3px;
+  background-color: #99E2D0;
+}
+.pagemenu .card {
+  display: flex;
+  justify-content: flex-start;
+  width: 92%;
+  border-radius: 15.043px;
+  box-shadow: 0px 4.01149px 15.0431px 0px rgba(0, 0, 0, 0.1);
+  background: #FFFFFF;
+  margin-left: 4%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+}
+.pagemenu .card div {
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  padding-top: 10px;
+  padding-left: 15px;
+}
+.pagemenu .card h3 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.pagemenu .card span {
+  display: flex;
+  justify-content: space-between;
+  align-items: first baseline;
+}
+.pagemenu .card p {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 17px;
+  font-weight: 300;
+}
+.pagemenu .card h4 {
+  padding-top: 15px;
+}
+
+.commander {
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+.commander .btn {
+  padding-left: 8px;
+  padding-right: 8px;
+  text-decoration: none;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  height: 50px;
+  width: 35%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-radius: 50px;
+  border: none;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.5s, opacity 0.5s, transform 0.5s;
+}
+.commander .btn:hover {
+  opacity: 85%;
+  box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
+  -ms-transform: scale(1.01);
+  /* IE 9 */
+  -webkit-transform: scale(1.01);
+  /* Safari 3-8 */
+  transform: scale(1.01);
 }
 
 /*# sourceMappingURL=style.css.map */
