--- a/styles/restaurants.scss
+++ b/styles/restaurants.scss
@@ -87,26 +87,13 @@ body {
     }
 
     .menu {
-        animation: fadeIn 0.5s both;
-
-        // &:nth-child(2) {
-        //     animation-delay: 500ms;
-        // }
-
-        // &:nth-child(3) {
-        //     animation-delay: 1000ms;
-        // }
-
-        // &:nth-child(4) {
-        //     animation-delay: 1500ms;
-        // }
-
+        padding-bottom: 15px;
+        animation: fadeIn 0.5s both;  
         @for $i from 1 through 4 {
             &:nth-child(#{$i}) {
                 animation-delay: 500ms * $i;
-            }
+            }   
         }
-
 
 
         /**** ***/
